syntax = "proto3";
package kratos.api;

option go_package = "sastoj/app/rsjudge/cases/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string addr = 1;
    int32 db = 2;
  }
  message Load {
    string problem_cases_location = 1;
    int64 chunk_size = 2;
  }
  Database database = 1;
  Redis redis = 2;
  Load load = 3;
}
